# napari-magic-wand

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_magic_wand/: __init__.py  _widget.py  _widget_brightest_path_lib.py  _widget_pyift.py  napari.yaml
